<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_plus"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_none"
        android:title="@string/action_none"/>
    <item
        android:id="@+id/action_sort_descending_date"
        android:title="@string/action_most_time_left"/>
    <item
        android:id="@+id/action_sort_ascending_date"
        android:title="@string/action_least_time_left"/>
    <item
        android:id="@+id/action_sort_complete"
        android:title="@string/action_complete"/>
    <item
        android:id="@+id/action_sort_incomplete"
        android:title="@string/action_incomplete"/>

</menu>